fixed spacing

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -57,7 +57,7 @@ body {
 
   .App-header {
     background-color: black;
-    padding: 20px;
+    padding: 5px;
     color: white;
 
     a {
@@ -99,9 +99,8 @@ body {
 }
 .Moodify-logo {
   display: flex;
-  
-  width: 10vw;
-  height: 10vw;
+  width: 50px;
+  height: 50px;
   margin-right: 10px;
 }
 
